@@ -7,20 +7,21 @@
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
+        <IsVisibleTab Value="True"/>
+        <WindowIndex Value="1"/>
         <TopLine Value="80"/>
         <CursorPos X="30" Y="103"/>
         <UsageCount Value="62"/>
+        <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="579"/>
-        <CursorPos Y="602"/>
+        <TopLine Value="540"/>
+        <CursorPos X="22" Y="564"/>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
@@ -50,12 +51,11 @@
       <Unit5>
         <Filename Value="Test4.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="44"/>
         <CursorPos X="45" Y="75"/>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test5.pas"/>
@@ -74,11 +74,9 @@
       <Unit8>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit8>
       <Unit9>
         <Filename Value="Test8.pas"/>
@@ -97,27 +95,28 @@
       <Unit11>
         <Filename Value="Test10.pas"/>
         <IsPartOfProject Value="True"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="109"/>
         <CursorPos X="19" Y="114"/>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="70"/>
         <CursorPos X="19" Y="81"/>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <CursorPos X="3" Y="11"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="58"/>
+        <CursorPos X="44" Y="69"/>
         <UsageCount Value="62"/>
       </Unit13>
       <Unit14>
@@ -166,19 +165,18 @@
       <Unit17>
         <Filename Value="Test16.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="110"/>
-        <CursorPos Y="131"/>
+        <TopLine Value="88"/>
+        <CursorPos Y="98"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
           <WindowIndex Value="1"/>
-          <TopLine Value="88"/>
-          <CursorPos Y="98"/>
+          <TopLine Value="110"/>
+          <CursorPos Y="131"/>
         </ExtraEditor1>
         <UsageCount Value="62"/>
-        <Loaded Value="True"/>
       </Unit17>
       <Unit18>
         <Filename Value="Makefile.fpc"/>
@@ -256,18 +254,18 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="585"/>
         <CursorPos Y="606"/>
         <UsageCount Value="25"/>
-        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="runtest.sh"/>
         <EditorIndex Value="-1"/>
-        <CursorPos X="100" Y="25"/>
-        <UsageCount Value="9"/>
+        <WindowIndex Value="1"/>
+        <CursorPos X="13" Y="12"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bash"/>
       </Unit29>
       <Unit30>
@@ -293,12 +291,11 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="843"/>
         <CursorPos X="3" Y="846"/>
         <UsageCount Value="18"/>
-        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../../cvs.old.versions/ibx/runtime/IBSQL.pas"/>
@@ -315,21 +312,19 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="1140"/>
         <CursorPos X="44" Y="1165"/>
         <UsageCount Value="18"/>
-        <Loaded Value="True"/>
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="62"/>
         <CursorPos X="25" Y="69"/>
         <UsageCount Value="17"/>
-        <Loaded Value="True"/>
       </Unit37>
       <Unit38>
         <Filename Value="../client/FBTransaction.pas"/>
@@ -446,11 +441,10 @@
       </Unit52>
       <Unit53>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="30" Y="20"/>
         <UsageCount Value="17"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
       <Unit54>
@@ -500,119 +494,6 @@
         <UsageCount Value="10"/>
       </Unit59>
     </Units>
-    <JumpHistory Count="28" HistoryIndex="27">
-      <Position1>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="882" Column="30" TopLine="865"/>
-      </Position1>
-      <Position2>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="780" Column="3" TopLine="775"/>
-      </Position2>
-      <Position3>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="245" Column="56" TopLine="232"/>
-      </Position3>
-      <Position4>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="841" Column="8" TopLine="826"/>
-      </Position4>
-      <Position5>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="278" Column="7" TopLine="256"/>
-      </Position5>
-      <Position6>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="585" Column="69" TopLine="580"/>
-      </Position6>
-      <Position7>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="718" Column="78" TopLine="708"/>
-      </Position7>
-      <Position8>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="586" Column="24" TopLine="571"/>
-      </Position8>
-      <Position9>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="1075" Column="4" TopLine="1051"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="847" Column="16" TopLine="831"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="852" Column="76" TopLine="835"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="854" Column="26" TopLine="837"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="862" Column="20" TopLine="847"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1078" Column="72" TopLine="1058"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1079" Column="73" TopLine="1062"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1165" Column="25" TopLine="1150"/>
-      </Position16>
-      <Position17>
-        <Filename Value="Test4.pas"/>
-        <Caret Line="60" Column="29" TopLine="51"/>
-      </Position17>
-      <Position18>
-        <Filename Value="TestManager.pas"/>
-        <Caret Line="39" Column="52" TopLine="19"/>
-      </Position18>
-      <Position19>
-        <Filename Value="Test4.pas"/>
-        <Caret Line="76" Column="19" TopLine="52"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="318" TopLine="301"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="327" Column="61" TopLine="301"/>
-      </Position21>
-      <Position22>
-        <Filename Value="TestManager.pas"/>
-        <Caret Line="598" Column="64" TopLine="591"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="848" Column="32" TopLine="847"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="322" Column="35" TopLine="301"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="1002" Column="16" TopLine="987"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="1030" Column="38" TopLine="1018"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="1029" Column="20" TopLine="1016"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="77" Column="59" TopLine="64"/>
-      </Position28>
-    </JumpHistory>
+    <JumpHistory HistoryIndex="-1"/>
   </ProjectSession>
 </CONFIG>
