@@ -19,11 +19,15 @@ FBINTF Change Log  version                                       (1.0-1) Tue, 03
 7. Add IFirebirdAPI.CreateDatabase variant to allow execution of user provided
    CREATE DATABASE statement.
 
-8. Update SQL Statement parsing to allow for Array Dimensions. That is the ':' in
+8. Update SQL Statement parsing to allow for Array Dimensions. That is so that the ':' in
    an array dimension is not mistaken for a named parameter prefix.
 
 9. Trim function no longer applied to result of GetAsString when Character set is
-   octets.
+   octets. Avoids loss of non printable characters at start of string.
+
+10. Add function GetPerfStatistics to IStatement. This returns ISQL like performance
+    statistics for the last action. Requires use of procedure IStatement.EnableStatistics
+    to enable stats gathering.
 
 FBINTF Change Log  version                                      (1.0-0) Tue, 06 Dec 2016 10:33:47 +0000
 
